wrap-image fix

--- a/catalog/view/theme/sealskinz/stylesheet/stylesheet.css
+++ b/catalog/view/theme/sealskinz/stylesheet/stylesheet.css
@@ -3899,9 +3899,5 @@ input.r5b {
 }
 #wrap-image {
     width: 346px;
-<<<<<<< HEAD
-    height: 353px;
-=======
     height: 373px;
->>>>>>> ab6bf8114e66d5c54458de1c775be823ae767e6e
 }
